--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-        <meta name="theme-color" content="#4DBA87">
-        <meta name="apple-mobile-web-app-capable" content="no">
-        <meta name="apple-mobile-web-app-status-bar-style" content="default">
-        <meta name="apple-mobile-web-app-title" content="journey-static">
-        <link rel="apple-touch-icon" href="../img/icons/apple-touch-icon-152x152.png">
-        <link rel="mask-icon" href="../img/icons/safari-pinned-tab.svg" color="#4DBA87">
-        <meta name="msapplication-TileImage" content="../img/icons/msapplication-icon-144x144.png">
-        <meta name="msapplication-TileColor" content="#000000">
+        <link rel="manifest" href="<%= BASE_URL %>img/icons/manifest.json">
         <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
     <title>Bebox</title>
   </head>
